--- a/frontend-accreditation-plataform/src/styles/checkinMobile.module.css
+++ b/frontend-accreditation-plataform/src/styles/checkinMobile.module.css
@@ -1,14 +1,12 @@
-.create{
+.main{
+    height: 100vh;
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh;
     font-family: 'Noto Sans', sans-serif;
-    font-size: 20px;
-    text-align: center;
     color: #217bd4;
-    width:100%;
-    background-color: #217bd4;
+    text-transform: uppercase;
+    background-color: #263252;
     background-image: url('../../public/grafismo.svg');
-}
+    background-attachment: fixed;
+  }
